src/test/deca/context/valid/provided/testglobal.deca
class A {
protected int x;
int getX(){
   return this.x;
}
void setX(int x){
   this.x = x;
}
}
class B extends A {
int getX(){
   return this.x;
}
void setX(int x){
   this.x = x;
}
float somme(int x){
   boolean a = true; //declare inside method
   float y;
   if (a){
	return x;
	}
   else{
	return y;
   }
}
}
{
A a = null;
B b = new B();
A d = new A();
B z = (B)(d); // cast
boolean c = b instanceof a; //instanceof
if (a==b){ // eq of two classes
   println("goody");
}
else{
println(a.getX()); //methodcall
println(b.getX());
a.setX(3);
}
}
