src/test/deca/context/invalid/provided/testi22.deca
//Resultats :
//Erreur contextuelle
//Ligne 11 : float is undefined
class A{
}
class B{}
{   
    int x;
    A a = null;
    B b = new B();
    if (a instanceof float){
        print("il marche il marche encoree ...");
    }
}